* Fixed OAuth 1 for GET requests (thanks to Corneliu Duplachi for pull request)
* Add detailed cookie matching to RequestSpecBuilder (thanks to Peter Major for pull request)
* Add File Size to InputStreamEntity (issue 988) (thanks to vjykumar for pull request)
* Properly encodes JSON from InputStream (issue 1040) (thanks to Maksymilian Pawlak for pull request)

Changelog 3.1.0 (2018-04-20)
-----------------------------
* Fixed generics handling of the detailed cookie matcher (thanks to Rafał Siwiec for pull request)
* Now using Type instead of Class in the API for mapping to Java Objects. For users of the REST Assured API the change is most prominent in the
  "ResponseBodyExtractionOptions" interface where the "as" method now takes a "java.lang.Type" instead of "java.lang.Class". This should not cause
  any backward incompatibilities. However this change also applies to ObjectMapperFactory's where there is a chance of backward incompatibilities
  to arise. For example if you previously had a custom JAXBObjectMapperFactory that looked like this:

     public class MyJAXBObjectMapperFactory implements JAXBObjectMapperFactory {
        public JAXBContext create(Class cls, String charset) {
            ...
        }
     }

  you now need to change it to:

    public class MyJAXBObjectMapperFactory implements JAXBObjectMapperFactory {
        public JAXBContext create(Type cls, String charset) {
            ...
        }
   }

  (note the change from Class to Type). This was needed for swagger integration (issue 980). (thanks to Victor Orlovsky for pull request)
* Add better integration for standard HTTP methods with Apache HttpClient which also solves an issue content-type header being generated for empty GET requests (issue 974) (thanks to Daniel Dyląg for pull request)
* No longer using DEF_CONTENT_CHARSET from Apache HttpClient since it caused compatibility issues (issue 757)