@@ -92,6 +92,24 @@ public class MultiPartITest extends WithJetty {
     }
 
     @Test
+    public void textUploadingWhenUsingMultiPartSpecificationAndCharsetAndHeaders() throws Exception {
+        // Given
+        final String string = IOUtils.toString(getClass().getResourceAsStream("/car-records.xsd"));
+
+        // When
+        given().
+                multiPart(new MultiPartSpecBuilder(string).with().charset("UTF-8").and().with().controlName("other").
+                        and().with().mimeType("application/vnd.some+json").
+                        and().with().header("X-Header-1", "Value1").
+                        and().with().header("X-Header-2", "Value2").build()).
+        expect().
+                statusCode(200).
+                body(is(string)).
+        when().
+                post("/multipart/string");
+    }
+
+    @Test
     public void inputStreamUploadingUsingMultiPartSpecification() throws Exception {
         // Given
         final InputStream is = getClass().getResourceAsStream("/car-records.xsd");
